# hazetunnel

./: .gitignore  LICENSE  README.md
.github/workflows/: xgo.yml
example/: server.py
hazetunnel/: cert.go  cffi.go  cmd.go  config.go  go.mod  go.sum  headers.go  http.go  injector.go  main.go  profiles.go  proxy.go
hazetunnel/api/: cert.go  cffi.go  config.go  http.go  injector.go  profiles.go  proxy.go
python-bindings/: README.md  pyproject.toml
python-bindings/hazetunnel/: __init__.py  __main__.py  __version__.py  cffi.py  control.py
